--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,22 @@
 @import "tailwindcss";
 
+
+
+@media (max-width: 1000px) {
+  h1 {
+    font-size: 3rem;;
+  }
+}
+
+
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
